fix #4098 - Team names are cut off in Fixtures component at certain breakpoints

--- a/common/app/assets/stylesheets/module/facia/snaps/_football.scss
+++ b/common/app/assets/stylesheets/module/facia/snaps/_football.scss
@@ -143,6 +143,12 @@
         .team__info {
             @include fs-headline(1, true)
         }
+
+        .table__caption--bottom {
+            position: absolute;
+            border-left: $gs-gutter/2 solid #ffffff;
+            border-right: $gs-gutter/2 solid #ffffff;
+        }
     }
 
     &.facia-snap-point--mini,
@@ -173,12 +179,12 @@
         }
         .football-match__team--home {
             @include rem((
-                padding-right: $gs-gutter*1.25
+                padding-right: $gs-gutter*0.75
             ));
         }
         .football-match__team--away {
             @include rem((
-                padding-left: $gs-gutter*1.25
+                padding-left: $gs-gutter*0.75
             ));
         }
 
